<resources>
    <string name="app_name">Logistic_regresion</string>
    <string name="correo_electr_nico">Correo electrónico</string>
    <string name="contrase_a">Contraseña</string>
    <string name="iniciar_sesi_n">Iniciar sesión</string>
    <string name="app_logo">Logo de la aplicación</string>
    <string name="nombre_usuario">Nombre de usuario</string>
    <string name="registrarse">Registrarse</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta? Inicia sesión</string>
    <string name="olvidaste_contrase_a">¿Olvidaste tu contraseña?</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta? Regístrate</string>

    <string name="enviar">Enviar</string>

    <string name="reset_password_message">Ingresa tu correo electrónico para restablecer tu contraseña</string>
    <string name="nueva_contrase_a">Nueva contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="cambiar_contrase_a">Cambiar contraseña</string>

    <string name="verification_title">Verificación de código</string>
    <string name="verification_message">Ingresa el código de 6 dígitos enviado a tu correo electrónico</string>
    <string name="verificar">Verificar</string>
    <string name="reenviar_codigo">Reenviar código</string>
    <string name="codigo_invalido">Código inválido</string>
    <string name="codigo_reenviado">Código reenviado</string>

    <string name="bienvenido">Bienvenido</string>
    <string name="cerrar_sesi_n">Cerrar Sesión</string>
    <string name="ver_perfil">Ver perfil</string>
    <string name="ver_configuraciones">Ver configuraciones</string>
    <string name="settings">Configuraciones</string>
    <string name="ver_configuracion">Ver Configuración</string>

    <string name="ver_rutas">Ver Rutas</string>
    <string name="ver_mis_rutas">Ver Mis Rutas</string>

    <string name="profile_image">Imagen de perfil</string>
    <string name="user_name_placeholder">Nombre de usuario</string>
    <string name="user_email_placeholder">Correo electrónico</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="logout">Cerrar sesión</string>
    <string name="nombre_de_usuario">Nombre de usuario</string>
</resources>
