<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color"
    tools:context=".activities.HomeActivity">

    <!-- Botón de Configuración -->
    <FrameLayout
        android:id="@+id/settingsButtonWrapper"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_gravity="center"
        android:clipToOutline="true"
        android:outlineProvider="background">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/settingsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_settings"
            android:background="@android:color/transparent"
            android:contentDescription="@string/settings"
            app:tint="@color/primary_color" />
    </FrameLayout>

    <!-- Botón de Perfil -->
    <FrameLayout
        android:id="@+id/profileButtonWrapper"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@android:color/white"
        android:elevation="4dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:clipToOutline="true"
        android:outlineProvider="background">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/profileButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp"
            android:src="@drawable/ic_person"
            android:background="@android:color/transparent"
            android:contentDescription="@string/ver_perfil"
            app:tint="@color/primary_color" />
    </FrameLayout>


    <!-- Mensaje de bienvenida -->
    <TextView
        android:id="@+id/welcomeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bienvenido"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/primary_text"
        app:layout_constraintTop_toBottomOf="@id/settingsButtonWrapper"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp" />

    <!-- Botón para ver rutas disponibles -->

    <!-- Botón para ver mis rutas -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/routesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:backgroundTint="@color/primary_color"
        android:icon="@drawable/ic_map"
        android:iconTint="@color/white"
        android:text="@string/ver_rutas"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcomeText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myRoutesButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:backgroundTint="@color/primary_color"
        android:icon="@drawable/ic_list"
        android:iconTint="@color/white"
        android:text="@string/ver_mis_rutas"
        android:textColor="@color/white"
        app:cornerRadius="16dp"
        app:iconPadding="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/routesButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
